เพิ่ม Bulma และจัดรูปแบบปุ่มเริ่มเกม

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <h1>Typing Test Game</h1>
-    <button>เริ่มเกม</button>
+    <div class="section">
+        <div class="container">
+            <div class="box" style="max-width: 300px; margin: auto;">
+                <h1 class="title">Typing Test Game</h1>
+                <hr>
+                <button class="button is-link is-medium is-fullwidth">เริ่มเกม</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
