เพิ่มวิธีการเก็บคะแนน

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             </div>
 
             <div id="sceneGame" style="display: none;">
-                <h1 class="title">Game?</h1>
+                <h1 class="title">
+                    คะแนน:
+                    <span id="gameScore">0</span>
+                </h1>
             </div>
 
         </div>
