เพิ่มระบบข้อความแบบสุ่มอย่างง่าย

--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
                     คะแนน:
                     <span id="gameScore">0</span>
                 </h1>
+                <hr>
+                <form onsubmit="">
+                    <div class="field">
+                        <label class="label">ข้อความที่ต้องพิมพ์:</label>
+                        <div class="control">
+                            <input id="typeWord" type="text" class="input" disabled>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label class="label">พิมพ์ลงที่ด้านล่าง:</label>
+                        <div class="control">
+                            <input id="typeAnswer" type="text" class="input">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <button class="button is-link">ส่งข้อความ</button>
+                    </div>
+                </form>
             </div>
 
         </div>
