เพิ่มระบบนับคะแนนเทียบกับสิ่งที่พิมพ์

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span id="gameScore">0</span>
                 </h1>
                 <hr>
-                <form onsubmit="">
+                <form onsubmit="submitAnswer(event)">
                     <div class="field">
                         <label class="label">ข้อความที่ต้องพิมพ์:</label>
                         <div class="control">
